monitoring/load-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator
  namespace:
  labels:
spec:
  containers:
  - image: busybox:latest
    name: busybox
    command: ["/bin/sh", "-c", "while true; do wget -O - -q http://nginx; done"]
