monitoring/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: lens-metrics
  name: prometheus
  annotations:
    kubernetes.io/ingress.class: "haproxy"
spec:
  rules:
  - host: prometheus.demo.noverit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 80
